# personaplex-webrtc

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  biome.json  package.json  pyproject.toml  start.sh
.github/workflows/: docker-image.yml
docker/: app-start.sh  model-env.sh  prefetch_assets.py  runpod-start.sh
frontend/: index.html
frontend/src/: App.css  App.jsx
frontend/src/api/: rtc.js
frontend/src/components/: Controls.jsx  Modals.jsx  Telemetry.jsx  icons.jsx
frontend/src/data/: dashboardData.jsx
frontend/src/hooks/: useDialogFocus.js  useStoredState.js  useToast.js
frontend/src/styles/: 00-base.css  10-shell-sidebar.css  20-status-modals.css  30-stage.css  40-popovers-listbox.css  50-tuning-console.css  60-toast-responsive.css
frontend/src/utils/: audio.js  format.js  sessionTrace.js
moshi/: pyproject.toml
moshi/moshi/: offline.py  rtc_opus.py  rtc_session.py  server.py
moshi/moshi/models/: lm.py  loaders.py
moshi/moshi/modules/: streaming.py
moshi/moshi/utils/: assets.py  logging.py  sampling.py
moshi/moshi/web_client/: index.html
moshi/moshi/web_client/assets/: index-10i0AczS.css  index-1UEjV-ez.js  index-2xikYD7C.js  index-B6PsbDzg.js  (+35 more)
moshi/tests/: test_asr_generation.py  test_asset_extract.py  test_cuda_dynamic_topk.py  test_inject_ritual.py  test_lm_controls.py  test_model_env.py  test_prefetch_assets.py  test_rtc_pipeline.py  test_rtc_resampler.py  test_runtime_diagnostics.py  test_session_config.py  test_vision_chunk.py  test_vision_context.py
scripts/: prefetch_assets.py  run-personaplex.sh
